--- a/src/components/image-slider/styles.css
+++ b/src/components/image-slider/styles.css
@@ -46,12 +46,13 @@
   
   .current-indicator {
     background-color: #ffffff;
-    height: 5px;
+
     width: 25px;
     border: none;
     outline: none;
     margin: 0 0.2rem;
     cursor: pointer;
+    border-radius: 4px;
 
   }
   
@@ -63,4 +64,6 @@
   .inactive-indicator{
       background-color: gray;
       width: 5px;
+      height: 1px;
+      
   }
