--- a/src/components/Custom-model/styles.css
+++ b/src/components/Custom-model/styles.css
@@ -6,6 +6,7 @@
     
 }
 .model{
+    z-index: 1;
     position: fixed;
     padding: 10px;
     top: 5vh;
@@ -23,6 +24,7 @@
     align-items: center;
     gap: 1px;
     padding: 20px;
+   
 }
 .header,.footer,.body{
     display: flex;
@@ -32,11 +34,14 @@
     width: 70%;
     background: #888787;
 }
+
 .close-icon{
-    font-size: 30px;
-    color: white;
     display: flex;
     justify-content: flex-end;
-    margin-right: 20px;
+    color: white;
+    font-size: 40px;
+    padding: 0 8px;
+    border-radius: 40px;
     cursor: pointer;
+    background: #000;
 }
